Adds search channels input

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "node": "6.7.0",
     "npm": "4.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.2"
+  },
   "scripts": {
     "heroku-postbuild": "webpack --config webpack.config.prod.js"
   },
