--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.5.2",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "redux-devtools-extension": "^2.13.2"
   },
   "engines": {
     "node": "6.7.0",
