--- a/package.json
+++ b/package.json
@@ -27,21 +27,29 @@
     "react-router": "^3.0.2",
     "react-tooltip": "^3.2.10",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.5.2",
-    "webpack": "^2.2.1",
-    "redux-devtools-extension": "^2.13.2"
+    "webpack": "^2.2.1"
   },
   "engines": {
     "node": "6.7.0",
     "npm": "4.3.0"
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.2"
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.4.0",
+    "prettier-eslint": "^8.2.0"
   },
   "scripts": {
-    "heroku-postbuild": "webpack --config webpack.config.prod.js"
+    "heroku-postbuild": "webpack --config webpack.config.prod.js",
+    "dev": "webpack --watch",
+    "lint": "eslint frontend",
+    "fix": "eslint frontend --fix"
   },
   "repository": {
     "type": "git",
