--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-loader": "^6.3.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.24.1",
     "emoji-mart": "^0.4.4",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
@@ -28,7 +29,6 @@
     "react-tooltip": "^3.2.10",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
-    "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.5.2",
     "webpack": "^2.2.1"
@@ -43,7 +43,8 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
-    "prettier-eslint": "^8.2.0"
+    "prettier-eslint": "^8.2.0",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "heroku-postbuild": "webpack --config webpack.config.prod.js",
